[package]
name = "minewars"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

# UNCOMMENT for my machine / local development
[patch."https://github.com/IyesGames/iyes_bevy_extras"]
iyes_bevy_extras = { path = "../../engine/iyes_bevy_extras" }
[patch."https://github.com/IyesGames/iyes_cli"]
iyes_cli = { path = "../../engine/iyes_cli" }
[patch."https://github.com/IyesGames/iyes_ui"]
iyes_ui = { path = "../../engine/iyes_ui" }

# PROPRIETARY BUILDS
[patch."https://github.com/IyesGames/minewars-proprietary-shim"]
mw_app_proprietary = { path = "../minewars-proprietary/lib/mw_app_proprietary" }
mw_host_proprietary = { path = "../minewars-proprietary/lib/mw_host_proprietary" }
mw_auth_proprietary = { path = "../minewars-proprietary/lib/mw_auth_proprietary" }
mw_game_minewars = { path = "../minewars-proprietary/lib/mw_game_minewars"}

[workspace]
resolver = "2"
members = [
    # binaries:
    # (self) # desktop client app
    "mobile", # mobile client app
    "bin/mw_authsrv", # Auth Server
    "bin/mw_hostsrv", # Host Server
    "bin/mw_certgen", # Cert Mgmt CLI
    "bin/mw_datatool", # CLI for mw_dataformat
    "bin/mw_hostrpc", # CLI for controlling Host
    # foundational
    "lib/common/mw_common", # Common code for everything
    "lib/common/mw_dataformat", # Dataformat codec
    # protocols
    "lib/common/mw_proto_auth", # Client <> Auth
    "lib/common/mw_proto_host", # Client <> Host
    "lib/common/mw_proto_hostrpc", # HostRPC <> Host
    "lib/common/mw_proto_hostauth", # Host <> Auth
    # server stuff
    "lib/srv/mw_host", # FOSS part of Host Server
    "lib/srv/mw_auth", # FOSS part of Auth Server
    # client stuff
    "lib/app/mw_app_core", # APIs/framework for the game client app
    "lib/app/mw_app_io", # Files, networking, events, etc.
    "lib/app/mw_app", # FOSS part of the game client, sans UI and Graphics
    "lib/app/mw_app_gfx2d", # 2D graphics for MineWars
    "lib/app/mw_app_gfx3d", # 3D graphics for MineWars
    "lib/app/mw_ui_desktop", # Desktop UI of mw_app
    "lib/app/mw_ui_mobile",  # Mobile UI of mw_app
    "lib/app/mw_platform_android", # Android-specific features
    "lib/app/mw_platform_ios", # iOS-specific features
    "lib/app/mw_platform_windows", # Windows-specific features
    "lib/app/mw_platform_macos", # MacOS-specific features
    "lib/app/mw_platform_linux", # Linux-specific features
    # gameplay for different game modes
    "lib/common/mw_game_minesweeper", # FOSS minesweeper mode (gameplay impl)
    "lib/app/mw_app_game_minesweeper", # FOSS minesweeper mode (app integration)
]

# dev: no LTO, some optimization,
# lots of codegen units for parallelism during compilation
[profile.dev]
opt-level = 1
debug = false
lto = false
codegen-units = 16
incremental = true
# release: Enable LTO and limit codegen units for better codegen
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false

[features]
default = [
    "gfx2d",
    "gfx3d",
    "mw_ui_desktop",
    "mw_ui_mobile",
]
dev = [
    "mw_app_core/dev",
    "mw_app_io/dev",
    "mw_app/dev",
    "mw_app_gfx2d?/dev",
    "mw_app_gfx3d?/dev",
    "mw_ui_desktop?/dev",
    "mw_ui_mobile?/dev",
    "mw_platform_windows/dev",
    "mw_platform_macos/dev",
    "mw_platform_linux/dev",
]
release = [
    "mw_app_core/release",
    "mw_app_io/release",
    "mw_app/release",
    "mw_app_gfx2d?/release",
    "mw_app_gfx3d?/release",
    "mw_ui_desktop?/release",
    "mw_ui_mobile?/release",
    "mw_platform_windows/release",
    "mw_platform_macos/release",
    "mw_platform_linux/release",
]
proprietary = [
    "dep:mw_app_proprietary",
    "mw_app_core/proprietary",
    "mw_app_io/proprietary",
    "mw_app/proprietary",
    "mw_app_gfx2d?/proprietary",
    "mw_app_gfx3d?/proprietary",
    "mw_ui_desktop?/proprietary",
    "mw_ui_mobile?/proprietary",
    "mw_platform_windows/proprietary",
    "mw_platform_macos/proprietary",
    "mw_platform_linux/proprietary",
]
gfx2d = ["mw_app_gfx2d"]
gfx3d = ["mw_app_gfx3d"]

[dependencies.mw_app_core]
path = "lib/app/mw_app_core"

[dependencies.mw_app_io]
path = "lib/app/mw_app_io"

[dependencies.mw_app]
path = "lib/app/mw_app"

[dependencies.mw_app_game_minesweeper]
path = "lib/app/mw_app_game_minesweeper"

[dependencies.mw_app_gfx2d]
path = "lib/app/mw_app_gfx2d"
optional = true

[dependencies.mw_app_gfx3d]
path = "lib/app/mw_app_gfx3d"
optional = true

[dependencies.mw_ui_desktop]
path = "lib/app/mw_ui_desktop"
optional = true

[dependencies.mw_ui_mobile]
path = "lib/app/mw_ui_mobile"
optional = true

[target.'cfg(target_os = "windows")'.dependencies.mw_platform_windows]
path = "lib/app/mw_platform_windows"

[target.'cfg(target_os = "macos")'.dependencies.mw_platform_macos]
path = "lib/app/mw_platform_macos"

[target.'cfg(target_os = "linux")'.dependencies.mw_platform_linux]
path = "lib/app/mw_platform_linux"

[dependencies.mw_app_proprietary]
git = "https://github.com/IyesGames/minewars-proprietary-shim"
optional = true

[dependencies]
iyes_perf_ui = "0.2.3"

[dependencies.bevy]
version = "0.13.2"
default-features = false
