[package]
name = "minewars_foss"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[workspace]
resolver = "2"
members = [
    # binaries:
    # (self) # desktop client app
    "mobile", # mobile client app
    # "bin/mw_authsrv", # Auth Server
    # "bin/mw_hostsrv", # Host Server
    "bin/mw_certgen", # Cert Mgmt CLI
    "bin/mw_datatool", # CLI for mw_dataformat
    # "bin/mw_hostrpc", # CLI for controlling Host
    # foundational
    "lib/common/mw_common", # Common code for everything
    "lib/common/mw_dataformat", # Dataformat codec
    # client stuff
    "lib/app/mw_engine", # Bespoke tech / building blocks
    "lib/app/mw_app_core", # APIs/framework for the game client app
    "lib/app/mw_app_io", # Files, networking, events, etc.
    "lib/app/mw_app", # FOSS part of the game client, sans UI and Graphics
    "lib/app/mw_app_gfx2d", # 2D graphics for MineWars
    "lib/app/mw_app_gfx3d", # 3D graphics for MineWars
    "lib/app/mw_ui_common", # UI building blocks
    "lib/app/mw_ui_desktop", # Desktop UI of mw_app
    "lib/app/mw_ui_mobile",  # Mobile UI of mw_app
    "lib/app/mw_platform_android", # Android-specific features
    "lib/app/mw_platform_ios", # iOS-specific features
    "lib/app/mw_platform_windows", # Windows-specific features
    "lib/app/mw_platform_macos", # MacOS-specific features
    "lib/app/mw_platform_linux", # Linux-specific features
    # gameplay for different game modes
    "lib/common/mw_game_minesweeper", # FOSS minesweeper mode (gameplay impl)
    "lib/app/mw_app_game_minesweeper", # FOSS minesweeper mode (app integration)
]

# dev: no LTO, some optimization,
# lots of codegen units for parallelism during compilation
[profile.dev]
opt-level = 1
debug = false
lto = false
codegen-units = 16
incremental = true
# release: Enable LTO and limit codegen units for better codegen
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false

[features]
dev = [
    "mw_app_core/dev",
    "mw_app_io/dev",
    "mw_app/dev",
    "mw_app_gfx2d/dev",
    "mw_app_gfx3d/dev",
    "mw_ui_desktop/dev",
    "mw_ui_mobile/dev",
    "mw_platform_windows/dev",
    "mw_platform_macos/dev",
    "mw_platform_linux/dev",
]
release = [
    "mw_app_core/release",
    "mw_app_io/release",
    "mw_app/release",
    "mw_app_gfx2d/release",
    "mw_app_gfx3d/release",
    "mw_ui_desktop/release",
    "mw_ui_mobile/release",
    "mw_platform_windows/release",
    "mw_platform_macos/release",
    "mw_platform_linux/release",
]

[dependencies.mw_engine]
path = "lib/app/mw_engine"

[dependencies.mw_app_core]
path = "lib/app/mw_app_core"

[dependencies.mw_app_io]
path = "lib/app/mw_app_io"

[dependencies.mw_app]
path = "lib/app/mw_app"

[dependencies.mw_app_game_minesweeper]
path = "lib/app/mw_app_game_minesweeper"

[dependencies.mw_app_gfx2d]
path = "lib/app/mw_app_gfx2d"

[dependencies.mw_app_gfx3d]
path = "lib/app/mw_app_gfx3d"

[dependencies.mw_ui_common]
path = "lib/app/mw_ui_common"

[dependencies.mw_ui_desktop]
path = "lib/app/mw_ui_desktop"

[dependencies.mw_ui_mobile]
path = "lib/app/mw_ui_mobile"

[target.'cfg(target_os = "windows")'.dependencies.mw_platform_windows]
path = "lib/app/mw_platform_windows"

[target.'cfg(target_os = "macos")'.dependencies.mw_platform_macos]
path = "lib/app/mw_platform_macos"

[target.'cfg(target_os = "linux")'.dependencies.mw_platform_linux]
path = "lib/app/mw_platform_linux"

[dependencies]
iyes_perf_ui = "0.3.0"

[dependencies.bevy]
version = "0.14.0"
default-features = false
