[package]
name = "minewars_mobile"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = [
    "gfx2d",
    "gfx3d",
    "mw_ui_desktop",
    "mw_ui_mobile",
]
dev = [
    "mw_app_core/dev",
    "mw_app_io/dev",
    "mw_app/dev",
    "mw_app_gfx2d?/dev",
    "mw_app_gfx3d?/dev",
    "mw_ui_desktop?/dev",
    "mw_ui_mobile?/dev",
    "mw_platform_android/dev",
    "mw_platform_ios/dev",
]
release = [
    "mw_app_core/release",
    "mw_app_io/release",
    "mw_app/release",
    "mw_app_gfx2d?/release",
    "mw_app_gfx3d?/release",
    "mw_ui_desktop?/release",
    "mw_ui_mobile?/release",
    "mw_platform_android/release",
    "mw_platform_ios/release",
]
proprietary = [
    "dep:mw_app_proprietary",
    "mw_app_core/proprietary",
    "mw_app_io/proprietary",
    "mw_app/proprietary",
    "mw_app_gfx2d?/proprietary",
    "mw_app_gfx3d?/proprietary",
    "mw_ui_desktop?/proprietary",
    "mw_ui_mobile?/proprietary",
    "mw_platform_android/proprietary",
    "mw_platform_ios/proprietary",
]
gfx2d = ["mw_app_gfx2d"]
gfx3d = ["mw_app_gfx3d"]
mw_ui_desktop = [ "dep:mw_ui_desktop", "dep:mw_ui_common" ]
mw_ui_mobile = [ "dep:mw_ui_mobile", "dep:mw_ui_common" ]

[dependencies.mw_engine]
path = "../lib/app/mw_engine"

[dependencies.mw_app_core]
path = "../lib/app/mw_app_core"

[dependencies.mw_app_io]
path = "../lib/app/mw_app_io"

[dependencies.mw_app]
path = "../lib/app/mw_app"

[dependencies.mw_app_game_minesweeper]
path = "../lib/app/mw_app_game_minesweeper"

[dependencies.mw_app_gfx2d]
path = "../lib/app/mw_app_gfx2d"
optional = true

[dependencies.mw_app_gfx3d]
path = "../lib/app/mw_app_gfx3d"
optional = true

[dependencies.mw_ui_common]
path = "../lib/app/mw_ui_common"
optional = true

[dependencies.mw_ui_desktop]
path = "../lib/app/mw_ui_desktop"
optional = true

[dependencies.mw_ui_mobile]
path = "../lib/app/mw_ui_mobile"
optional = true

[target.'cfg(target_os = "android")'.dependencies.mw_platform_android]
path = "../lib/app/mw_platform_android"

[target.'cfg(target_os = "ios")'.dependencies.mw_platform_ios]
path = "../lib/app/mw_platform_ios"

[dependencies.mw_app_proprietary]
git = "https://github.com/IyesGames/minewars-proprietary-shim"
optional = true

[dependencies]
iyes_perf_ui = "0.3.0"

[dependencies.bevy]
version = "0.14.0"
default-features = false

[package.metadata.android]
package = "com.iyesgames.minewars"
apk_name = "MineWars"
assets = "../assets"
strip = "strip"
build_targets = ["aarch64-linux-android"]
# build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 31

[lib]
name = "minewars_mobile"
crate-type = ["staticlib", "cdylib"]
