[package]
name = "mw_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proprietary = []

[dependencies.mw_common]
path = "../mw_common"
features = [ "bevy" ]

[dependencies.mw_game_minesweeper]
path = "../mw_game_minesweeper"
features = ["bevy"]

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
directories = "5.0.1"
enum-iterator = "1.4.1"
enum-map = "2.7.3"
glam = "0.25.0"
hashbrown = "0.14.3"
modular-bitfield = "0.11.2"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
thiserror = "1.0.56"
tracing = "0.1.40"

[dependencies.serde]
version = "1.0.195"
features = [ "derive" ]

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"serialize",
]

[dependencies.iyes_bevy_extras]
git = "https://github.com/IyesGames/iyes_bevy_extras"
features = ["2d"]
