[package]
name = "mw_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []
release = []
proprietary = []
gfx2d = ["iyes_bevy_extras/2d"]
gfx2d_tilemap = ["gfx2d", "dep:bevy_ecs_tilemap"]
gfx3d = []
buttplug = ["dep:buttplug"]

[dependencies.mw_common]
path = "../mw_common"
features = [ "bevy", "net" ]

[dependencies.mw_engine]
path = "../mw_engine"

[dependencies.mw_game_minesweeper]
path = "../mw_game_minesweeper"
features = [ "bevy" ]

[dependencies.mw_proto_host]
path = "../mw_proto_host"

[dependencies.mw_proto_auth]
path = "../mw_proto_auth"

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
directories = "5.0.1"
enum-iterator = "1.5.0"
enum-map = "2.7.3"
fluent_content = "0.0.5"
glam = "0.25.0"
hashbrown = "0.14.3"
iyes_perf_ui = "0.2.3"
modular-bitfield = "0.11.2"
num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
num_cpus = "1.16.0"
rand = "0.8.5"
ron = "0.8.1"
thiserror = "1.0.57"
toml = "0.8.10"
tracing = "0.1.40"
unic-langid = "0.9.4"

[dependencies.serde]
version = "1.0.196"
features = [ "derive" ]

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "jpeg",
    "webp",
    "hdr",
    "dds",
    "ktx2",
    "zstd",
    "vorbis",
    "flac",
    "wav",
    "x11",
    "wayland",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "serialize",
]

[dependencies.iyes_progress]
version = "0.11.0"
features = ["assets"]

[dependencies.bevy_asset_loader]
version = "0.20"
features = [
    "2d",
    "progress_tracking",
    "standard_dynamic_assets",
]

[dependencies.bevy_common_assets]
version = "0.10.0"
features = [
    "ron",
    "toml",
]

[dependencies.bevy_fluent]
version = "0.9.0"
features = []

[dependencies.bevy_tweening]
version = "0.10.0"

[dependencies.bevy_ecs_tilemap]
optional = true
git = "https://github.com/StarArawn/bevy_ecs_tilemap"

[dependencies.iyes_bevy_extras]
git = "https://github.com/IyesGames/iyes_bevy_extras"

[dependencies.iyes_cli]
git = "https://github.com/IyesGames/iyes_cli"

[dependencies.iyes_ui]
git = "https://github.com/IyesGames/iyes_ui"
features = ["iyes_cli"]

[dependencies.buttplug]
version = "7.1.13"
optional = true
default-features = false
features = [
    "tokio-runtime",
    "websockets",
    "websocket-server-manager",
    "serialize-json",
]
