[package]
name = "mw_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = [ "dep:bevy" ]
net = [ "dep:rustls", "dep:tokio", "dep:quinn"]

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
enum-iterator = "1.4.1"
enum-map = "2.6.1"
glam = "0.24.1"
hashbrown = "0.14.0"
modular-bitfield = "0.11.2"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
thiserror = "1.0.47"
tracing = "0.1.37"
rand_pcg = "0.3.1"

[dependencies.rand]
version = "0.8.5"
default-features = false
features = [
    "std",
    "libc",
]

[dependencies.serde]
version = "1.0.188"
features = [ "derive" ]

[dependencies.bevy]
version = "0.11.2"
default-features = false
optional = true
features = [
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
]

[dependencies.tokio]
version = "1.32.0"
optional = true
features = [
    "full",
]

[dependencies.rustls]
version = "0.20.8" # must be whatever quinn uses
optional = true
default-features = false
features = []

[dependencies.quinn]
version = "0.9.3"
optional = true
default-features = false
features = ["runtime-tokio", "tls-rustls"]
