[package]
name = "mw_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = [ "dep:bevy" ]
net = [ "dep:rustls", "dep:tokio", "dep:tokio-util", "dep:quinn"]

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
enum-iterator = "1.4.1"
enum-map = "2.7.3"
glam = "0.25.0"
modular-bitfield = "0.11.2"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
thiserror = "1.0.56"
tracing = "0.1.40"
rand_pcg = "0.3.1"

[dependencies.hashbrown]
version = "0.14.3"
features = ["serde"]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = [
    "std",
    "libc",
]

[dependencies.serde]
version = "1.0.195"
features = [ "derive" ]

[dependencies.bevy]
version = "0.12.1"
default-features = false
optional = true
features = [
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
]

[dependencies.tokio]
version = "1.35.1"
optional = true
features = [
    "full",
]

[dependencies.tokio-util]
version = "0.7.10"
optional = true
features = [
    "full",
]

[dependencies.rustls]
version = "0.21" # must be whatever quinn uses
optional = true
default-features = false
features = []

[dependencies.quinn]
version = "0.10.2"
optional = true
default-features = false
features = ["runtime-tokio", "tls-rustls"]
