[package]
name = "mw_dataformat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mw_common = { path = "../mw_common" }

[dependencies.lz4_flex]
lz4_flex = "0.9.2"
default-features = false
features = ["std", "safe-encode", "safe-decode"]
