[package]
name = "mw_dataformat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mw_common = { path = "../mw_common" }
thiserror = "1.0.56"

[dependencies.lz4_flex]
version = "0.11.1"
default-features = false
features = ["std", "safe-encode", "safe-decode"]
