[package]
name = "mw_dataformat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
mw_common = { path = "../mw_common" }
seahash = "4.1.0"
thiserror = "1.0.57"

[dependencies.lz4_flex]
version = "0.11.2"
default-features = false
features = ["std", "safe-encode", "safe-decode"]
