[package]
name = "mw_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = [
    "bevy/file_watcher",
    "bevy/bevy_debug_stepping",
    "bevy/glam_assert",
    "bevy/dynamic_linking",
]
release = []
proprietary = []

[dependencies.mw_common]
path = "../mw_common"
features = [ "bevy", "net" ]

[dependencies]
enum-iterator = "1.5.0"
fluent_content = "0.0.5"
unic-langid = "0.9.4"

[dependencies.serde]
version = "1.0.196"
features = [ "derive" ]

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "jpeg",
    "webp",
    "hdr",
    "dds",
    "ktx2",
    "zstd",
    "vorbis",
    "flac",
    "wav",
    "x11",
    "wayland",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "serialize",
]

[dependencies.bevy_common_assets]
version = "0.10.0"
features = [
    "ron",
    "toml",
]

[dependencies.bevy_fluent]
version = "0.9.0"
features = []

[dependencies.iyes_bevy_extras]
git = "https://github.com/IyesGames/iyes_bevy_extras"

[dependencies.iyes_progress]
version = "0.11.0"
features = ["assets"]

[dependencies.iyes_cli]
git = "https://github.com/IyesGames/iyes_cli"
