[package]
name = "mw_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proprietary = []

[dependencies]
mw_dataformat = { path = "../mw_dataformat" }
mw_proto_host = { path = "../mw_proto_host" }
mw_proto_hostrpc = { path = "../mw_proto_hostrpc" }
mw_proto_hostauth = { path = "../mw_proto_hostauth" }
modular-bitfield = "0.11.2"
toml = "0.8.8"
anyhow = "1.0.79"
ron = "0.8.1"

[dependencies.mw_common]
path = "../mw_common"
features = [ "net" ]

[dependencies.serde]
version = "1.0.195"
features = [ "derive" ]

[dependencies.clap]
version = "4.4.14"
features = [ "derive" ]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [ "env-filter" ]

[dependencies.tracing]
version = "0.1.40"
features = [ "async-await" ]
