[package]
name = "mw_proto_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mw_common = { path = "../mw_common" }
mw_dataformat = { path = "../mw_dataformat" }
thiserror = "1.0.48"

[dependencies.serde]
version = "1.0.188"
features = [ "derive" ]
