[package]
name = "mw_proto_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mw_common = { path = "../mw_common", features = ["net"] }
mw_dataformat = { path = "../mw_dataformat" }
thiserror = "1.0.56"
rmp-serde = "1.1.2"

[dependencies.serde]
version = "1.0.195"
features = [ "derive" ]

[dependencies.quinn]
version = "0.10.2"
optional = true
default-features = false
features = ["runtime-tokio", "tls-rustls"]
