[package]
name = "mw_proto_hostrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mw_common = { path = "../mw_common" }
mw_dataformat = { path = "../mw_dataformat" }
ron = "0.8.1"
thiserror = "1.0.57"
toml = "0.8.10"

[dependencies.serde]
version = "1.0.196"
features = [ "derive" ]
