[package]
name = "mw_ui_desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []
release = []
proprietary = []

[dependencies.mw_common]
path = "../mw_common"
features = [ "bevy" ]

[dependencies.mw_app_core]
path = "../mw_app_core"

[dependencies]

[dependencies.bevy]
version = "0.13.2"
default-features = false

[dependencies.bevy_tweening]
version = "0.10.0"

[dependencies.iyes_bevy_extras]
git = "https://github.com/IyesGames/iyes_bevy_extras"

[dependencies.iyes_ui]
git = "https://github.com/IyesGames/iyes_ui"
features = ["iyes_cli"]
