[package]
name = "mw_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = []
release = []
proprietary = []
buttplug = ["dep:buttplug"]

[dependencies.mw_common]
path = "../../common/mw_common"
features = [ "bevy", "net" ]

[dependencies.mw_dataformat]
path = "../../common/mw_dataformat"

[dependencies.mw_proto_host]
path = "../../common/mw_proto_host"

[dependencies.mw_proto_auth]
path = "../../common/mw_proto_auth"

[dependencies.mw_app_core]
path = "../mw_app_core"

[dependencies]
anyhow = "1.0.79"
derive_more = "0.99.17"
enum-iterator = "1.5.0"
enum-map = "2.7.3"
glam = "0.25.0"
hashbrown = "0.14.3"
iyes_perf_ui = "0.2.3"
map-macro = { version = "0.3.0", features = ["hashbrown"] }
modular-bitfield = "0.11.2"
num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
num_cpus = "1.16.0"
rand = "0.8.5"
ron = "0.8.1"
thiserror = "1.0.57"
toml = "0.8.10"
tracing = "0.1.40"

[dependencies.serde]
version = "1.0.196"
features = [ "derive" ]

[dependencies.bevy]
version = "0.13.2"
default-features = false
# Bevy should inherit its features via `mw_app_core`

[dependencies.iyes_progress]
version = "0.11.0"
features = ["assets"]

[dependencies.bevy_common_assets]
version = "0.10.0"
features = [
    "ron",
    "toml",
]

[dependencies.bevy_asset_loader]
version = "0.20"
features = [
    "progress_tracking",
    "standard_dynamic_assets",
]

[dependencies.iyes_bevy_extras]
git = "https://github.com/IyesGames/iyes_bevy_extras"

[dependencies.iyes_cli]
git = "https://github.com/IyesGames/iyes_cli"

[dependencies.iyes_ui]
git = "https://github.com/IyesGames/iyes_ui"
features = ["iyes_cli"]

[dependencies.buttplug]
version = "7.1.13"
optional = true
default-features = false
features = [
    "tokio-runtime",
    "websockets",
    "websocket-server-manager",
    "serialize-json",
]
